--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -35,7 +35,7 @@ h6 {
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url(../img/intro-bg.jpg) no-repeat center center;
+    background: url(../img/screen-bg.jpg) no-repeat center center;
     background-size: cover;
 }
 
@@ -116,7 +116,7 @@ h6 {
 .banner {
     padding: 100px 0;
     color: #f8f8f8;
-    background: url(../img/banner-bg.jpg) no-repeat center center;
+    background: url(../img/mail.jpg) no-repeat center center;
     background-size: cover;
 }
 
@@ -167,4 +167,8 @@ footer {
 
 p.copyright {
     margin: 15px 0 0;
+}
+
+.rounded {
+    border-radius: 15px;
 }
